2003-02-04  Sam Steingold  <sds@gnu.org>

	* clos.lisp (class): new slot DIRECT-SUBCLASSES
	(obsolete-class): new function
	(ensure-class): use it
	(initialize-instance-standard-class, make-instance-built-in-class)
	(initialize-instance-structure-class): update DIRECT-SUBCLASSES of
	the DIRECT-SUPERCLASSES of this class
	* lispbibl.d (Class): new slot direct_subclasses
	* clos.lisp (class-and): new function
	* type.lisp (canonicalize-type): use it

2003-02-04  Sam Steingold  <sds@gnu.org>

	* type.lisp (type-class, %standard-char-p)
	(valid-interval-designator-p, interval-mix): new functions
	(STANDARD-CHAR): use %STANDARD-CHAR-P to define
	(canonicalize-type): STANDARD-CHAR -> use %STANDARD-CHAR-P
	to avoid errors
	AND/OR -> more rigorous attempts to simplify
	REALs -> check interval designators
	CONS -> check components

2003-02-04  Sam Steingold  <sds@gnu.org>

	* array.d (bit_up): fixed a GC-safety bug: allocation invalidates
	dimptr (a pointer inside an Iarray structure) [this bug have
	never triggered before because, as the 2003-01-31 indicates, this
	code has never been used since it was written!]

2003-02-04  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	fixed bug #[ 679661 ]: FFI segfault passing struct arrays
	* foreign.d (count_walk_pre): C-ARRAY-PTR should reserve room
	for the array argument

2003-02-03  Sam Steingold  <sds@gnu.org>

	EXT:XOR checks that exactly one of its arguments is non-NIL
	* control.d (XOR): implemented
	* init.lisp (XOR): exported
	* constsym.d, subr.d (xor): added

2003-02-02  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle pathnames and some special
	objects, like `nullobj' and `unbound'; fflush out; do not print
	package prefix for keywords

2003-02-01  Sam Steingold  <sds@gnu.org>

	* io.d (read_delimited_list): fixed a crash introduced by the
	2003-01-21 "multiple forms on one line" patch: need to unbind